--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kachi Emmanuel Ministries</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Kachi Emmanuel Ministries | Ministering Through Creativity</title>
+    <meta name="title" content="Kachi Emmanuel Ministries | Ministering Through Creativity" />
+    <meta name="description" content="Kachi Emmanuel Ministries is dedicated to spreading the Gospel through creative media, powerful teachings, and transformative outreach programs." />
+    <meta name="keywords" content="Kachi Emmanuel, Ministries, Gospel, Christian, Creativity, Faith, Nigeria, Spiritual Growth, Believers Perspective, Daily Devotionals" />
+    <meta name="author" content="Kachi Emmanuel Ministries" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://kachiministries.org" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kachiministries.org" />
+    <meta property="og:title" content="Kachi Emmanuel Ministries | Kingdom Impact" />
+    <meta property="og:description" content="Transforming lives globally through the creative presentation of the Gospel. Join our mission." />
+    <meta property="og:image" content="https://bezaleelforge.github.io/kachi/17.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kachiministries.org" />
+    <meta property="twitter:title" content="Kachi Emmanuel Ministries | Ministering Through Creativity" />
+    <meta property="twitter:description" content="Transforming lives globally through the creative presentation of the Gospel. Join our mission." />
+    <meta property="twitter:image" content="https://bezaleelforge.github.io/kachi/17.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://bezaleelforge.github.io/kachi/17.jpg" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -26,7 +52,6 @@
             background-size: 20px 20px;
             background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
         }
-        /* Custom scrollbar for text areas if needed */
         ::-webkit-scrollbar {
           width: 8px;
           height: 8px;
